Fix settings & modal button spacing

--- a/src/settings/settings.scss
+++ b/src/settings/settings.scss
@@ -8,7 +8,8 @@
     }
     margin-bottom: 8px;
   }
-  &__folder-button {
+  &__folder-button,
+  &__path-button {
     margin-left: 0;
     margin-right: 8px;
   }
